# goit-software-12

./: .env  README.md  docker-compose.yml  main.py  pyproject.toml  test.db
_build/doctrees/: environment.pickle  index.doctree
_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/html/_modules/: index.html
docs/: conf.py
docs/_build/doctrees/: environment.pickle
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
migrations/: env.py
migrations/versions/: 32bdc3fc1e64_опис_міграції.py  4e349dde639c_initial_migration.py  7eed38520d4d_init.py  bdb9e35a1ff5_add_a_email_confirmed.py  e9f789dc3d7c_add_a_sphinx_docstrings.py
postgres-data/: postmaster.pid
postgres-data/base/13480/: 2619
postgres-data/base/13481/: pg_internal.init
postgres-data/base/16384/: 1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1259  1259_fsm  1259_vm  16395  16398  16400  16408  16409  16411  16419  16420  16422  16424  16932  16934  16940  16941  16943  16945  16947  16953  16954  16956  2224  2224_vm  2579  2604  2606  (+34 more)
postgres-data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
postgres-data/pg_stat_tmp/: db_0.stat  db_16384.stat  global.stat
postgres-data/pg_xact/: 0000
str/: schemas.py
str/conf/: __init__.py  config.py
str/database/: db.py  models.py
str/repository/: notes.py  users.py
str/routes/: auth.py  notes.py  users.py
str/services/: auth.py  email.py
tests/: conftest.py  test_auth.py  test_imports.py  test_repository_notes.py  test_repository_users.py  test_route_auth.py
(+17 files in other folders)
