[tool.poetry]
name = "software-11"
version = "0.1.0"
description = ""
authors = ["Slytherin fantom <uliadiakiv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.3"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "1.7.4"
python-multipart = "^0.0.9"
bcrypt = "3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
