[tool.poetry]
name = "software-12"
version = "0.1.0"
description = ""
authors = ["Slytherin fantom <uliadiakiv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.3"
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "1.7.4"
python-multipart = "^0.0.9"
bcrypt = "3.2.0"
fastapi-mail = "^1.4.1"
python-dotenv = "^1.0.1"
fastapi-limiter = "^0.1.6"
pydantic-settings = "^2.3.4"
cloudinary = "^1.40.0"
sphinx-pydantic = "^0.1.1"
pytest = "^8.2.2"
sqlalchemy-utils = "^0.41.2"
pytest-asyncio = "^0.23.7"
aiosqlite = "^0.20.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.3.7"


[tool.poetry.group.test.dependencies]
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
